# Wheel-Of-Fortune

./: .gitignore  CMakeLists.txt  README.md  WordHandler.cpp  WordHandler.h  game.cpp  game.h  outcome.cpp  outcome.h  penalty.cpp  penalty.h  puzzle.cpp  puzzle.h  reward.cpp  reward.h  stringutil.cpp  stringutil.h  test  testa.sh  user.cpp  user.h  wheel.cpp  wheel.h  wheeloutcome.cpp  wheeloutcome.h
game/: CMakeLists.txt
puzzles/: CMakeLists.txt  WordHandler.cpp  WordHandler.h  phrases.txt  puzzle.cpp
puzzles/puzzle_strings/: classictv.txt  movietitle.txt
scripts/: testa.sh
user/: CMakeLists.txt  user.cpp
wheel/: CMakeLists.txt  wheel.cpp  wheel.h
wheel/wheeloutcome/: CMakeLists.txt  penalty.cpp  penalty.h  reward.cpp  reward.h  wheeloutcome.cpp
